EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==05/25/2011==
JJ: Implemented Arcane Tongues research AA. Chance for research success increases for each rank (10, 25, 50).
JJ: Implemented New Tanaan Crafting Mastery tradeskill AA. Each rank allows an additional tradeskill above 200.
Note: For servers with players who have tradeskills already above the limit without previously purchasing these AAs will freeze the chance to increase until they purchase the proper amount of NTCM AAs.

==05/24/2011==
KLS: Changed Mob::NPCSpecialAttacks(atk, perm) to Mob::NPCSpecialAttacks(atk, perm, [reset = 1], [remove = 0]).  
This should allow one to add and remove flags individually without having to reset everything each time. 
ex: 
$npc->NPCSpecialAttacks(RQ, 0); //would enable the npc to rampage and quad.
$npc->NPCSpecialAttacks(S, 0, 0); //Would enable the NPC to summon as well as rampage and quad by telling it to set S but don't reset the earlier flags.

ex:
$npc->NPCSpecialAttacks(RQS, 0); //would enable the npc to rampage, quad and summon.
$npc->NPCSpecialAttacks(S, 0, 0, 1); //Would enable the NPC rampage and quad by telling it to set S but don't reset the earlier flags and also remove the flag being set.

==05/23/2011==
JJ: (Akkadius) Fixed camera shake usage output.

==05/22/2011==
KLS and Co: 
-All liquid should count for skill ups.
-Finished unified quest interface... this is fairly large and will probably have a few problems here and there; report them to me and ill fix them asap.  
The goal behind the system is to allow more than one scripting system to work at a time (though with limited interaction due to pre-existing implementation limitation).  
This was a feature requested by the Dalaya community as they plan to merge back to the eqemu codebase and clients but are stuck with an old parser and thousands of files 
that can't be realistically rewritten in a short time frame.

==05/20/2011==