@@ -213,6 +213,7 @@ public:
 
 	const char* varlink(char* perltext, int item_id);
 	const char* saylink(char* Phrase, bool silent, char* LinkName);
+	const char* getguildnamebyid(int guild_id);
 	void SetRunning(bool val);
 	bool IsRunning();
 	void FlyMode(int8 flymode);
